@@ -121,6 +121,9 @@ Bug Fixes
   (Mark Miller, Adam McElwee)
 
 * SOLR-7638: Fix new (Angular-based) admin UI Cloud pane (Upayavira via ehatcher)
+
+* SOLR-7655: The DefaultSolrHighlighter since 5.0 was determining if payloads were present in a way
+  that was slow, especially when lots of fields were highlighted.  It's now fast.  (David Smiley)
   
 Other Changes
 ----------------------
